# VisualOdometry

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  TODO.org  readme.txt
include/: Frame.hpp  Logging.hpp  MapPoint.hpp  MotionEstimation.hpp  MotionEstimation.hpp~  ORBextractor.h  TrajectoryViz.hpp  TrajectoryViz.hpp~  util.hpp
scripts/: KITTICalib2OCVYAML.py  KITTIPoses2OCVYAML.py
src/: Frame.cpp  MapPoint.cpp  MotionEstimation.cpp  MotionEstimation.cpp~  ORBextractor.cpp  TrajectoryViz.cpp  TrajectoryViz.cpp~  main.cpp  main.cpp~  main_euroc.cpp  main_kitti.cpp
